Refactor DRY día 10